--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -1910,7 +1910,7 @@
     "\n",
     "for update_rule in ['sgd', 'sgd_momentum']:\n",
     "  print 'running with ', update_rule\n",
-    "  model = FullyConnectedNet([100, 100, 100, 100, 100], weight_scale=5e-2, reg=0.2)\n",
+    "  model = FullyConnectedNet([100, 100, 100, 100, 100], weight_scale=5e-2)\n",
     "\n",
     "  solver = Solver(model, small_data,\n",
     "                  num_epochs=5, batch_size=100,\n",
